se agrego busqueda

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
       <div class="container-fluid justify-content-center">
         <form class="d-flex" role="search">
           <input
+          id="input-busqueda"
             class="form-control me-2"
             type="search"
             placeholder="Search"
             aria-label="Search"
           />
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <button id="btn-busqueda" class="btn btn-outline-success" type="submit">Buscar</button>
         </form>
       </div>
     </nav>
